# Rust-music-player

./: .gitignore  Cargo.toml  LICENSE  README.md  out.txt
.github/workflows/: release.yml  rust.yml
src/: lib.rs  main.rs  playlist.rs
src/audio/: decoder.rs  display.rs  mod.rs  player.rs  utils.rs
src/audio/decoders/: alac.rs  ffmpeg.rs  mod.rs  opus.rs  rodio.rs  vorbis.rs
src/display/: console.rs
src/models/: mod.rs  song_metadata.rs
src/utils/: format.rs  metadata.rs  mod.rs
tests/: audio_playback_tests.rs
tests/resources/: test.aac  test.m4a  test.opus
