[package]
name = "rust_music_player"
version = "0.1.1"
edition = "2021"

[dependencies]
rodio = { version = "0.20.*", features = ["symphonia-all"] }
terminal_size = "0.4.1"
device_query = "3.0.0"
crossterm = "0.28"
anyhow = "1.0"
lofty = "0.22"
opus = "0.3"
ogg = "0.9"
lewton = "0.10.2"

[profile.release]
opt-level = 3            # Maximum optimization
lto = true              # Enable link-time optimization
codegen-units = 1       # Slower compilation, better optimization
panic = 'abort'         # Remove panic unwinding code
strip = true           # Remove debug symbols
