[package]
name = "rust_music_player"
version = "0.1.3"
edition = "2021"

[features]
local-audio-tests = []

[dependencies]
rodio = { version = "0.20.*", features = ["symphonia-all"] }
terminal_size = "0.4.1"
crossterm = "0.28"
anyhow = "1.0"
lofty = "0.22"
opus = "0.3"
ogg = "0.9"
lewton = "0.10.2"
ffmpeg-next = "7.1.0"
alac = "0.5.0"

[dev-dependencies]
tempfile = "3.8"
mockall = "0.13"
test-case = "3.1"

[[test]]
name = "audio_playback_tests"
path = "tests/audio_playback_tests.rs"

[profile.release]
opt-level = 3            # Maximum optimization
lto = true              # Enable link-time optimization
codegen-units = 1       # Slower compilation, better optimization
panic = 'abort'         # Remove panic unwinding code
strip = true           # Remove debug symbols
